update CRSpider to auto detect charset, migrate to httpclient as base.